--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>和文モールス練習ゲーム - いろはにほへとモールス信号学習</title>
 <meta name="description" content="和文モールス信号を楽しく学べるゲーム。スペースキーやボタンでモールス信号を入力し、いろは歌の文字を覚えよう。初心者向け練習アプリ。">
 <meta name="keywords" content="和文モールス, モールス信号, いろは歌, モールス信号練習, 和文モールス練習ゲーム, 日本語モールス信号, モールスコード学習, モールス信号入力ゲーム, 初心者モールス, モールス信号覚え方, モールス信号テスト, いろはにほへとモールス, モールス信号スペースキー, モールス信号学習アプリ, 日本語暗号, 通信技術, 信号入力, モールス符号練習, 通信訓練, 和文モールス暗号, 日本語モールスコード, いろは歌練習, 暗号ゲーム, 信号学習ツール, 日本語信号学習, タイピングゲーム, 短点長点入力">
-
+<meta name="google-site-verification" content="VR9Qr-9_6LK3dERPoJdOBy8ukkgufE8YZZtFLgTDh6U" />
 <link rel="stylesheet" href="style.css" />
 
 </head>
@@ -51,7 +51,7 @@
 
 <script src="script.js"></script>
 
-<footer style="text-align:center; margin-top:40px; font-size:14px; color:#555;">
+<footer style="text-align:center; margin-top:10px; font-size:14px; color:#555;">
   <p>
     &copy; 2025 rikuworks&nbsp;|&nbsp;
     <a href="https://twitter.com/motomochi_robo" target="_blank" rel="noopener noreferrer" style="color:#1DA1F2; text-decoration:none;">
