dd:detect_font`

--- a/index.html
+++ b/index.html
@@ -3,62 +3,44 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>和文モールス練習ゲーム - いろはにほへとモールス信号学習</title>
-<meta name="description" content="和文モールス信号を楽しく学べるゲーム。スペースキーやボタンでモールス信号を入力し、いろは歌の文字を覚えよう。初心者向け練習アプリ。">
-<meta name="keywords" content="和文モールス, モールス信号, いろは歌, モールス信号練習, 和文モールス練習ゲーム, 日本語モールス信号, モールスコード学習, モールス信号入力ゲーム, 初心者モールス, モールス信号覚え方, モールス信号テスト, いろはにほへとモールス, モールス信号スペースキー, モールス信号学習アプリ, 日本語暗号, 通信技術, 信号入力, モールス符号練習, 通信訓練, 和文モールス暗号, 日本語モールスコード, いろは歌練習, 暗号ゲーム, 信号学習ツール, 日本語信号学習, タイピングゲーム, 短点長点入力">
-<meta name="google-site-verification" content="VR9Qr-9_6LK3dERPoJdOBy8ukkgufE8YZZtFLgTDh6U" />
+<title>ツール集</title>
+<meta name="description" content="フォント検索ツールと和文モールス練習ゲームへのリンク集">
 <link rel="stylesheet" href="style.css" />
 
 </head>
 <body>
 
-<h1 class="highlight-box">和文モールス いろはにほへと</h1>
-
+<h1 class="highlight-box">ツール集</h1>
 <p id="infoBox" class="highlight-box-b">
-  スペースキーを使ってモールス信号を入力します<br>
-  短く押すと「・（短点）」<br>
-  長く押すと「－（長点）」が入力されます<br>
-  下のボタンをクリックしても入力可能です<br>
-  ご質問やバグ報告はTwitterまで
+作成したウェブツールの一覧です。<br>
+下のリンクから各ツールにアクセスしてください。<br>
+ご質問やバグ報告はTwitterまで
 </p>
 
 <div>
-  <h2>出題文字（問題）</h2>
-  <div id="question">「ゲーム開始」ボタンを<br>押してください</div>
-</div>
-
-<div>
-  <h2>入力したモールス信号</h2>
-  <div id="signal"></div>
-</div>
-
-<div>
-  <h2>フィードバック（正誤判定）</h2>
-  <div id="feedback"></div>
-</div>
-
-<div>
-  <h2>スコア・進捗</h2>
-  <div id="score"></div>
-</div>
-
-<div id="inputButtons">
-  <button id="dotBtn">・</button>
-  <button id="dashBtn">－</button>
-</div>
-
-<button id="startBtn">ゲーム開始</button>
-
-<script src="script.js"></script>
-
-<footer style="text-align:center; margin-top:10px; font-size:14px; color:#555;">
-  <p>
-    &copy; 2025 rikuworks&nbsp;|&nbsp;
-    <a href="https://twitter.com/motomochi_robo" target="_blank" rel="noopener noreferrer" style="color:#1DA1F2; text-decoration:none;">
-      Twitter @motomochi_robo
+  <h2>公開ツール一覧</h2>
+      <div id="question" style="margin-bottom: 15px;">
+    <a href="font_detect/font_detect.html" style="text-decoration:none; display: block; padding: 10px 0;">
+      <h3>🔍 ふぉんとさがし</h3>
+      <p style="margin: 0; color: #555;">あのサイトでつかってるフォントは何???</p>
     </a>
-  </p>
-</footer>
+  </div>
+
+      <div id="question">
+    <a href="morse_jp/morse_jp.html" style="text-decoration:none; display: block; padding: 10px 0;">
+      <h3>📻 和文モールス練習ゲーム</h3>
+      <p style="margin: 0; color: #555;">いろはにほへとモールス信号学習</p>
+    </a>
+  </div>
+</div>
 
 </body>
+<footer style="text-align:center; margin-top:10px; font-size:14px; color:#555;">
+<p>
+&copy; 2025 rikuworks&nbsp;|&nbsp;
+<a href="https://twitter.com/motomochi_robo" target="_blank" rel="noopener noreferrer" style="color:#1DA1F2; text-decoration:none;">
+Twitter @motomochi_robo
+</a>
+</p>
+</footer>
 </html>
