add:detect_font

--- a/morse_jp/morse_jp.html
+++ b/morse_jp/morse_jp.html
@@ -26,9 +26,9 @@
   <h2>出題文字（問題）</h2>
   <div id="question">「ゲーム開始」ボタンを<br>押してください</div>
 </div>
-
-<button id="tweetBtn" class="tweet-btn">𝕏 結果をツイート 𝕏</button>
-
+<div>
+    <button id="tweetBtn" class="tweet-btn">𝕏 結果をツイート 𝕏</button>
+</div>
 <div>
   <h2>入力したモールス信号</h2>
   <div id="signal"></div>
